--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "dotenv": "^8.2.0"
   },
   "dependencies": {
     "@hot-loader/react-dom": "^16.13.0",
@@ -55,6 +56,5 @@
     "react-hot-loader": "^4.12.20",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "dotenv": "^8.2.0"
   }
 }
