--- a/package.json
+++ b/package.json
@@ -55,6 +55,6 @@
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.20",
     "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.1.2"
   }
 }
