--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "development": "nodemon",
     "build": "webpack --config webpack.config.client.production.js && webpack --mode=production --config webpack.config.server.js",
-    "start": "SET NODE_ENV=production& node ./dist/server.generated.js"
+    "start": "cross-env NODE_ENV=production node ./dist/server.generated.js"
   },
   "engines": {
     "node": "15.1.0",
@@ -26,14 +26,14 @@
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
+    "dotenv": "^8.2.0",
     "file-loader": "^6.0.0",
     "nodemon": "^2.0.2",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0",
-    "webpack-node-externals": "^1.7.2",
-    "dotenv": "^8.2.0"
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "@hot-loader/react-dom": "^16.13.0",
@@ -44,6 +44,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "formidable": "^1.2.2",
