trying to fix bug with Heroku app failure

--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   "scripts": {
     "development": "nodemon",
     "build": "webpack --config webpack.config.client.production.js && webpack --mode=production --config webpack.config.server.js",
-    "start": "SET NODE_ENV=production& node ./dist/server.generated.js"
+    "start": "set NODE_ENV=production & node ./dist/server.generated.js"
   },
   "engines": {
-    "node": "15.1.0",
+    "node": "15.11.0",
     "npm": "7.0.8"
   },
   "devDependencies": {
